# Chessboard-Parser

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/chessboard_parser/: cli.py
tests/: dummie_test.py
