[build-system]
requires = [
  "setuptools>=61.0",
  "argparse",
]
build-backend = "setuptools.build_meta"

[project]
name = "chessboard_parser"
dynamic = ["version"]
description = "This is a chessboard parser that can parse chessboard positions to FEN strings and vice versa."
readme = {file = "README.md", content-type = "text/markdown"}

authors = [
  {name = "Siyuan Wang", email = "sywang0227@gmail.com"},
]
maintainers = [
  {name = "Siyuan Wang", email = "sywang0227@gmail.com"},
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
license = {text = "MIT license"}
dependencies = [
]

[project.scripts]
chessboard_parser = "chessboard_parser.cli:app"

[project.optional-dependencies]
dev = [
  "coverage",       # Testing
  "mypy",           # Type checking
  "pytest",         # Testing
  "ruff",           # Linting
  "black",          # Formatting
  "pre-commit",    # Git hooks
]

[project.urls]
# Optional URLs
bugs = "https://github.com/Wangmerlyn/ChessBoard-Parser/issues"
changelog = "https://github.com/Wangmerlyn/ChessBoard-Parser/blob/main/changelog.md"
homepage = "https://github.com/Wangmerlyn/ChessBoard-Parser"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools.dynamic]
version = { attr = "chessboard_parser.__version__" }

# -----------------------------
# Mypy type checking
[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

# Ruff linter
[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "UP"]
ignore = ["E501"]
exclude = ["build", "dist", ".venv"]

[tool.ruff.lint.isort]
known-first-party = ["chessboard_parser"]
combine-as-imports = true
force-single-line = false
